--- a/门店/商品/库存单据.md
+++ b/门店/商品/库存单据.md
@@ -13,13 +13,13 @@
         <td>receiptType</td>
         <td>object</td>
         <td>单据类型</td>
-        <td>in("入库单"),out("出库单"),check("盘点单")</td>
+        <td>in("入库单"),out("出库单"),transfer("本店调拨"),check("盘点单")</td>
     </tr>
     <tr>
         <td>receiptCategory</td>
-        <td>object</td>
+        <td>string</td>
         <td>单据分类</td>
-        <td>purchaseIn("采购入库"),transferIn("调拨入库"),transferOut("调拨出库"),damageOut("损溢出库"),returnOut("退货出库"),check("盘点")</td>
+        <td></td>
     </tr>
     <tr>
         <td>title</td>
@@ -40,27 +40,21 @@
         <td>-</td>
     </tr>
     <tr>
-        <td>fromShop</td>
+        <td>targetShopId</td>
         <td>string</td>
-        <td>来源门店</td>
+        <td>目标门店Id</td>
         <td>-</td>
     </tr>
     <tr>
-        <td>fromWarehouse</td>
+        <td>targetShop</td>
         <td>string</td>
-        <td>来源仓库</td>
+        <td>目标门店</td>
         <td>-</td>
     </tr>
     <tr>
-        <td>date</td>
-        <td>Date</td>
-        <td>日期</td>
-        <td>默认填写当前日期, 格式: 2021-01-02</td>
-    </tr>
-    <tr>
-        <td>remark</td>
+        <td>targetWarehouse</td>
         <td>string</td>
-        <td>备注</td>
+        <td>目标仓库</td>
         <td>-</td>
     </tr>
     <tr>
@@ -68,18 +62,6 @@
         <td>Date</td>
         <td>日期</td>
         <td>默认填写当前日期, 格式: 2021-01-02</td>
-    </tr>
-    <tr>
-        <td>date</td>
-        <td>Date</td>
-        <td>日期</td>
-        <td>默认填写当前日期, 格式: 2021-01-02</td>
-    </tr>
-    <tr>
-        <td>auditInfo</td>
-        <td>object</td>
-        <td>审核信息</td>
-        <td>userId: 审核人ID date: 日期时间 result: approval(批准) reject(拒绝) reason: 操作原因 remark: 备注</td>
     </tr>
     <tr>
         <td>productCount</td>
@@ -90,14 +72,32 @@
     <tr>
         <td>stockCount</td>
         <td>int</td>
-        <td>商品数量</td>
+        <td>库存数量</td>
         <td>-</td>
+    </tr>
+    <tr>
+        <td>auditStatus</td>
+        <td>AuditStatus</td>
+        <td>审核状态</td>
+        <td>waiting(待审核),doing(审核中), approval(审核通过), reject(审核拒绝)</td>
+    </tr>
+    <tr>
+        <td>auditInfo</td>
+        <td>object</td>
+        <td>审核信息</td>
+        <td>userId: 审核人ID date: 日期时间 result: approval(批准) reject(拒绝) reason: 操作原因 remark: 备注</td>
     </tr>
     <tr>
         <td>status</td>
         <td>Status</td>
         <td>状态</td>
         <td>doing(进行中), auditing(待审核), ok(正常), reject(审核拒绝), cancel(取消)</td>
+    </tr>
+    <tr>
+        <td>remark</td>
+        <td>string</td>
+        <td>备注</td>
+        <td>-</td>
     </tr>
 </table>
 
@@ -148,6 +148,360 @@ POST /product/v1/receipt
 ```
 
 >请求参数
+
+>入库-采购入库
+<table>
+    <tr>
+        <th style="width:150px;">名称</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:60px;">必填</th>
+        <th style="width:200px;">说明</th>
+    </tr>
+    <tr>
+        <td>shopId</td>
+        <td>string</td>
+        <td>是</td>
+        <td>入库门店ID</td>
+    </tr>
+    <tr>
+        <td>warehouse</td>
+        <td>string</td>
+        <td>是</td>
+        <td>入库仓库</td>
+    </tr>
+    <tr>
+        <td>receiptType</td>
+        <td>string</td>
+        <td>是</td>
+        <td>单据类型, 固定值: in</td>
+    </tr>
+    <tr>
+        <td>receiptCategory</td>
+        <td>string</td>
+        <td>是</td>
+        <td>操作分类,固定值: 采购入库</td>
+    </tr>
+    <tr>
+        <td>title</td>
+        <td>string</td>
+        <td>是</td>
+        <td>标题</td>
+    </tr>
+    <tr>
+        <td>date</td>
+        <td>date</td>
+        <td>是</td>
+        <td>日期时间</td>
+    </tr>
+    <tr>
+        <td>remark</td>
+        <td>string</td>
+        <td>-</td>
+        <td>备注</td>
+    </tr>
+</table>
+
+>入库-外店拨入
+<table>
+    <tr>
+        <th style="width:150px;">名称</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:60px;">必填</th>
+        <th style="width:200px;">说明</th>
+    </tr>
+    <tr>
+        <td>shopId</td>
+        <td>string</td>
+        <td>是</td>
+        <td>入库门店ID</td>
+    </tr>
+    <tr>
+        <td>warehouse</td>
+        <td>string</td>
+        <td>是</td>
+        <td>入库仓库</td>
+    </tr>
+    <tr>
+        <td>receiptType</td>
+        <td>string</td>
+        <td>是</td>
+        <td>单据类型, 固定值: in</td>
+    </tr>
+    <tr>
+        <td>receiptCategory</td>
+        <td>string</td>
+        <td>是</td>
+        <td>操作分类,固定值: 外店拨入</td>
+    </tr>
+    <tr>
+        <td>title</td>
+        <td>string</td>
+        <td>是</td>
+        <td>标题</td>
+    </tr>
+    <tr>
+        <td>targetShopId</td>
+        <td>string</td>
+        <td>-</td>
+        <td>来源门店Id</td>
+    </tr>
+    <tr>
+        <td>targetShop</td>
+        <td>string</td>
+        <td>-</td>
+        <td>来源门店</td>
+    </tr>
+    <tr>
+        <td>date</td>
+        <td>date</td>
+        <td>是</td>
+        <td>日期时间</td>
+    </tr>
+    <tr>
+        <td>remark</td>
+        <td>string</td>
+        <td>-</td>
+        <td>备注</td>
+    </tr>
+</table>
+
+>出库-拨往外店
+<table>
+    <tr>
+        <th style="width:150px;">名称</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:60px;">必填</th>
+        <th style="width:200px;">说明</th>
+    </tr>
+    <tr>
+        <td>shopId</td>
+        <td>string</td>
+        <td>是</td>
+        <td>出库门店ID</td>
+    </tr>
+    <tr>
+        <td>warehouse</td>
+        <td>string</td>
+        <td>是</td>
+        <td>出库仓库</td>
+    </tr>
+    <tr>
+        <td>receiptType</td>
+        <td>string</td>
+        <td>是</td>
+        <td>单据类型, 固定值: out</td>
+    </tr>
+    <tr>
+        <td>receiptCategory</td>
+        <td>string</td>
+        <td>是</td>
+        <td>操作分类,固定值: 拨往外店</td>
+    </tr>
+    <tr>
+        <td>title</td>
+        <td>string</td>
+        <td>是</td>
+        <td>标题</td>
+    </tr>
+    <tr>
+        <td>targetShopId</td>
+        <td>string</td>
+        <td>-</td>
+        <td>拨往门店Id</td>
+    </tr>
+    <tr>
+        <td>targetShop</td>
+        <td>string</td>
+        <td>-</td>
+        <td>拨往门店</td>
+    </tr>
+    <tr>
+        <td>date</td>
+        <td>date</td>
+        <td>是</td>
+        <td>日期时间</td>
+    </tr>
+    <tr>
+        <td>remark</td>
+        <td>string</td>
+        <td>-</td>
+        <td>备注</td>
+    </tr>
+</table>
+
+>出库-损溢出库
+<table>
+    <tr>
+        <th style="width:150px;">名称</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:60px;">必填</th>
+        <th style="width:200px;">说明</th>
+    </tr>
+    <tr>
+        <td>shopId</td>
+        <td>string</td>
+        <td>是</td>
+        <td>出库门店ID</td>
+    </tr>
+    <tr>
+        <td>warehouse</td>
+        <td>string</td>
+        <td>是</td>
+        <td>出库仓库</td>
+    </tr>
+    <tr>
+        <td>receiptType</td>
+        <td>string</td>
+        <td>是</td>
+        <td>单据类型, 固定值: out</td>
+    </tr>
+    <tr>
+        <td>receiptCategory</td>
+        <td>string</td>
+        <td>是</td>
+        <td>操作分类,固定值: 损溢出库</td>
+    </tr>
+    <tr>
+        <td>title</td>
+        <td>string</td>
+        <td>是</td>
+        <td>标题</td>
+    </tr>
+    <tr>
+        <td>date</td>
+        <td>date</td>
+        <td>是</td>
+        <td>日期时间</td>
+    </tr>
+    <tr>
+        <td>remark</td>
+        <td>string</td>
+        <td>-</td>
+        <td>备注</td>
+    </tr>
+</table>
+
+>本店调拨
+<table>
+    <tr>
+        <th style="width:150px;">名称</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:60px;">必填</th>
+        <th style="width:200px;">说明</th>
+    </tr>
+    <tr>
+        <td>shopId</td>
+        <td>string</td>
+        <td>是</td>
+        <td>出库门店ID</td>
+    </tr>
+    <tr>
+        <td>warehouse</td>
+        <td>string</td>
+        <td>是</td>
+        <td>出库仓库</td>
+    </tr>
+    <tr>
+        <td>receiptType</td>
+        <td>string</td>
+        <td>是</td>
+        <td>单据类型, 固定值: transfer</td>
+    </tr>
+    <tr>
+        <td>receiptCategory</td>
+        <td>string</td>
+        <td>是</td>
+        <td>操作分类,固定值: 本店调拨</td>
+    </tr>
+    <tr>
+        <td>title</td>
+        <td>string</td>
+        <td>是</td>
+        <td>标题</td>
+    </tr>
+    <tr>
+        <td>targetShopId</td>
+        <td>string</td>
+        <td>-</td>
+        <td>拨往门店Id, 同shopId</td>
+    </tr>
+    <tr>
+        <td>targetShop</td>
+        <td>string</td>
+        <td>-</td>
+        <td>拨往门店, 本店名</td>
+    </tr>
+    <tr>
+        <td>targetWarehouse</td>
+        <td>string</td>
+        <td>-</td>
+        <td>拨往仓库</td>
+    </tr>
+    <tr>
+        <td>date</td>
+        <td>date</td>
+        <td>是</td>
+        <td>日期时间</td>
+    </tr>
+    <tr>
+        <td>remark</td>
+        <td>string</td>
+        <td>-</td>
+        <td>备注</td>
+    </tr>
+</table>
+
+>盘点
+<table>
+    <tr>
+        <th style="width:150px;">名称</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:60px;">必填</th>
+        <th style="width:200px;">说明</th>
+    </tr>
+    <tr>
+        <td>shopId</td>
+        <td>string</td>
+        <td>是</td>
+        <td>盘点门店ID</td>
+    </tr>
+    <tr>
+        <td>warehouse</td>
+        <td>string</td>
+        <td>是</td>
+        <td>盘点仓库</td>
+    </tr>
+    <tr>
+        <td>receiptType</td>
+        <td>string</td>
+        <td>是</td>
+        <td>单据类型, 固定值: check</td>
+    </tr>
+    <tr>
+        <td>receiptCategory</td>
+        <td>string</td>
+        <td>是</td>
+        <td>操作分类,固定值: 盘点</td>
+    </tr>
+    <tr>
+        <td>title</td>
+        <td>string</td>
+        <td>是</td>
+        <td>标题</td>
+    </tr>
+    <tr>
+        <td>date</td>
+        <td>date</td>
+        <td>是</td>
+        <td>日期时间</td>
+    </tr>
+    <tr>
+        <td>remark</td>
+        <td>string</td>
+        <td>-</td>
+        <td>备注</td>
+    </tr>
+</table>
 
 
 ## 更新单据
