顾客:添加关联顾客接口

--- a/门店/顾客/顾客.md
+++ b/门店/顾客/顾客.md
@@ -302,3 +302,9 @@ GET /customer/v1/customer/:id
 ```
 DELETE /customer/v1/customer/:id
 ```
+
+## 关联顾客
+
+```
+GET /customer/v1/customer/linked?id=:id
+```
