--- a/门店/员工/员工.md
+++ b/门店/员工/员工.md
@@ -109,23 +109,23 @@
 ## 员工列表
 
 ```
-GET /user/v1/user
+GET /shop/user/v1/user
 ```
 
 ## 查看
 
 ```
-GET /user/v1/user/:id
+GET /shop/user/v1/user/:id
 ```
 
 ## 当前登录用户
 
 ```
-GET /user/v1/user/current
+GET /shop/user/v1/user/current
 ```
 
 ## 当前登录用户门店列表
 
 ```
-GET /user/v1/user/shop-list
+GET /shop/user/v1/user/shop-list
 ```
