--- a/门店/商品/厂商供应商.md
+++ b/门店/商品/厂商供应商.md
@@ -74,23 +74,23 @@
 ## 厂商列表
 
 ```
-GET /product/v1/company
+GET /shop/product/v1/company
 ```
 
 ## 添加厂商
 
 ```
-GET /product/v1/company
+GET /shop/product/v1/company
 ```
 
 ## 编辑厂商
 
 ```
-PATCH /product/v1/company/:id
+PATCH /shop/product/v1/company/:id
 ```
 
 ## 删除厂商
 
 ```
-DELETE /product/v1/company/:id
+DELETE /shop/product/v1/company/:id
 ```
