--- a/门店/商品/品牌型号.md
+++ b/门店/商品/品牌型号.md
@@ -20,7 +20,7 @@
 ## 品牌列表
 
 ```
-GET /product/v1/brand
+GET /shop/product/v1/brand
 ```
 
 >请求参数
@@ -48,7 +48,7 @@ GET /product/v1/brand
 ## 型号列表
 
 ```
-GET /product/v1/model
+GET /shop/product/v1/model
 ```
 
 >请求参数
