--- a/门店/商品/商品信息.md
+++ b/门店/商品/商品信息.md
@@ -146,7 +146,7 @@
 ## 商品目录列表
 
 ```
-GET /product/v1/product
+GET /shop/product/v1/product
 ```
 
 >请求参数
@@ -181,7 +181,7 @@ GET /product/v1/product
 ## 商品目录导出
 
 ```
-GET /product/v1/product/export
+GET /shop/product/v1/product/export
 ```
 
 >请求参数
@@ -215,7 +215,7 @@ GET /product/v1/product/export
 ## 添加(excel方式)
 
 ```
-POST /product/v1/product/import
+POST /shop/product/v1/product/import
 ```
 
 > 此方式通过excel导入批量添加, 相同商品会覆盖现有数据
@@ -257,7 +257,7 @@ POST /product/v1/product/import
 ## 添加(表单方式)
 
 ```
-POST /product/v1/product
+POST /shop/product/v1/product
 ```
 
 > 此方式通过excel导入批量添加, 相同商品会覆盖现有数据
@@ -308,7 +308,7 @@ POST /product/v1/product
 ## 更新
 
 ```
-PATCH /product/v1/product/:id
+PATCH /shop/product/v1/product/:id
 ```
 
 >请求参数
@@ -324,5 +324,5 @@ PATCH /product/v1/product/:id
 ## 删除
 
 ```
-DELETE /product/v1/product/:id
+DELETE /shop/product/v1/product/:id
 ```
