--- a/门店/商品/库存单据.md
+++ b/门店/商品/库存单据.md
@@ -104,7 +104,7 @@
 ## 库存单据列表
 
 ```
-GET /product/v1/receipt
+GET /shop/product/v1/receipt
 ```
 
 >请求参数
@@ -144,7 +144,7 @@ GET /product/v1/receipt
 ## 添加单据
 
 ```
-POST /product/v1/receipt
+POST /shop/product/v1/receipt
 ```
 
 >请求参数
@@ -507,7 +507,7 @@ POST /product/v1/receipt
 ## 更新单据
 
 ```
-PATCH /product/v1/receipt/:id
+PATCH /shop/product/v1/receipt/:id
 ```
 
 >请求参数
@@ -529,7 +529,7 @@ PATCH /product/v1/receipt/:id
 ## 取消单据
 
 ```
-POST /product/v1/receipt/cancel
+POST /shop/product/v1/receipt/cancel
 ```
 
 >请求参数
@@ -551,7 +551,7 @@ POST /product/v1/receipt/cancel
 ## 删除单据
 
 ```
-DELETE /product/v1/receipt/:id
+DELETE /shop/product/v1/receipt/:id
 ```
 
 >请求参数
@@ -573,7 +573,7 @@ DELETE /product/v1/receipt/:id
 ## 提交审核单据
 
 ```
-POST /product/v1/receipt/submit-audit
+POST /shop/product/v1/receipt/submit-audit
 ```
 
 > 仅表单方式需要提交审核, excel方式自动提交审核
@@ -597,7 +597,7 @@ POST /product/v1/receipt/submit-audit
 ## 审核单据
 
 ```
-POST /product/v1/receipt/audit
+POST /shop/product/v1/receipt/audit
 ```
 
 >请求参数
