--- a/门店/商品/库存查询.md
+++ b/门店/商品/库存查询.md
@@ -3,7 +3,7 @@
 ## 库存查询
 
 ```
-GET /product/v1/stock
+GET /shop/product/v1/stock
 ```
 
 >请求参数
@@ -49,7 +49,7 @@ GET /product/v1/stock
 ## 库存导出
 
 ```
-GET /product/v1/stock/export
+GET /shop/product/v1/stock/export
 ```
 
 >请求参数
