--- a/门店/商品/库存记录.md
+++ b/门店/商品/库存记录.md
@@ -92,7 +92,7 @@
 ## 库存记录列表
 
 ```
-GET /product/v1/stock-log
+GET /shop/product/v1/stock-log
 ```
 
 >请求参数
@@ -122,7 +122,7 @@ GET /product/v1/stock-log
 >添加记录到库存单据, 仅入库使用此添加方式
 
 ```
-POST /product/v1/stock-log/instock
+POST /shop/product/v1/stock-log/instock
 ```
 
 > 此方式可多次向单据中添加库存记录, 提交相同商品将覆盖现有数据
@@ -201,7 +201,7 @@ POST /product/v1/stock-log/instock
 >添加记录到库存单据, 除入库外其它添加方式
 
 ```
-POST /product/v1/stock-log
+POST /shop/product/v1/stock-log
 ```
 
 > 此方式可多次向单据中添加库存记录, 提交相同商品将覆盖现有数据
@@ -254,7 +254,7 @@ POST /product/v1/stock-log
 ## 更新库存记录
 
 ```
-PATCH /product/v1/stock-log/:id
+PATCH /shop/product/v1/stock-log/:id
 ```
 
 >请求参数
@@ -300,5 +300,5 @@ PATCH /product/v1/stock-log/:id
 ## 删除库存记录
 
 ```
-DELETE /product/v1/stock-log/:id
+DELETE /shop/product/v1/stock-log/:id
 ```
