--- a/门店/处置/处置单.md
+++ b/门店/处置/处置单.md
@@ -39,7 +39,7 @@
 ## 新建
 
 ```
-POST /treatment/v1/treatment
+POST /shop/treatment/v1/treatment
 ```
 
 >请求参数
@@ -67,19 +67,19 @@ POST /treatment/v1/treatment
 ## 列表
 
 ```
-GET /treatment/v1/treatment
+GET /shop/treatment/v1/treatment
 ```
 
 ## 查看
 
 ```
-GET /treatment/v1/treatment/:id
+GET /shop/treatment/v1/treatment/:id
 ```
 
 ## 取消
 
 ```
-POST /treatment/v1/treatment/cancel
+POST /shop/treatment/v1/treatment/cancel
 ```
 
 >请求参数
@@ -107,5 +107,5 @@ POST /treatment/v1/treatment/cancel
 ## 删除
 
 ```
-DELETE /treatment/v1/treatment/:id
+DELETE /shop/treatment/v1/treatment/:id
 ```
