--- a/门店/处置/处置项目.md
+++ b/门店/处置/处置项目.md
@@ -62,7 +62,7 @@
 ## 添加(按商品)
 
 ```
-POST /treatment/v1/item/create-by-product
+POST /shop/treatment/v1/item/create-by-product
 ```
 
 >请求参数
@@ -96,25 +96,25 @@ POST /treatment/v1/item/create-by-product
 ## 列表
 
 ```
-GET /treatment/v1/item?treatmentId=:treatmentId
+GET /shop/treatment/v1/item?treatmentId=:treatmentId
 ```
 
 ## 查看
 
 ```
-GET /treatment/v1/item/:id
+GET /shop/treatment/v1/item/:id
 ```
 
 ## 删除
 
 ```
-DELETE /treatment/v1/item/:id
+DELETE /shop/treatment/v1/item/:id
 ```
 
 ## 删除(按商品)
 
 ```
-DELETE /treatment/v1/item/delete-by-product
+DELETE /shop/treatment/v1/item/delete-by-product
 ```
 
 >请求参数
