--- a/门店/检查/检查单.md
+++ b/门店/检查/检查单.md
@@ -39,7 +39,7 @@
 ## 新建
 
 ```
-POST /optometry/v1/optometry
+POST /shop/optometry/v1/optometry
 ```
 
 >请求参数
@@ -67,19 +67,19 @@ POST /optometry/v1/optometry
 ## 列表
 
 ```
-GET /optometry/v1/optometry
+GET /shop/optometry/v1/optometry
 ```
 
 ## 查看
 
 ```
-GET /optometry/v1/optometry/:id
+GET /shop/optometry/v1/optometry/:id
 ```
 
 ## 取消
 
 ```
-POST /optometry/v1/optometry/cancel
+POST /shop/optometry/v1/optometry/cancel
 ```
 
 >请求参数
@@ -107,5 +107,5 @@ POST /optometry/v1/optometry/cancel
 ## 删除
 
 ```
-DELETE /optometry/v1/optometry/:id
+DELETE /shop/optometry/v1/optometry/:id
 ```
