--- a/门店/检查/检查项目.md
+++ b/门店/检查/检查项目.md
@@ -111,7 +111,7 @@
 ## 等检查列表(包含今日已完成列表)
 
 ```
-GET /optometry/v1/item/check
+GET /shop/optometry/v1/item/check
 ```
 > 请求参数
 
@@ -152,7 +152,7 @@ GET /optometry/v1/item/check
 ## 检查项列表
 
 ```
-GET /optometry/v1/item
+GET /shop/optometry/v1/item
 ```
 > 请求参数
 
@@ -172,13 +172,13 @@ GET /optometry/v1/item
 ## 查看检查项
 
 ```
-GET /optometry/v1/item/:id
+GET /shop/optometry/v1/item/:id
 ```
 
 ## 添加(按套餐)
 
 ```
-POST /optometry/v1/item/create-by-combo
+POST /shop/optometry/v1/item/create-by-combo
 ```
 
 >请求参数
@@ -206,7 +206,7 @@ POST /optometry/v1/item/create-by-combo
 ## 添加(按检查项)
 
 ```
-POST /optometry/v1/item/create-by-optometryitem
+POST /shop/optometry/v1/item/create-by-optometryitem
 ```
 
 >请求参数
@@ -235,7 +235,7 @@ POST /optometry/v1/item/create-by-optometryitem
 ## 提交检查项数据
 
 ```
-POST /optometry/v1/item/data
+POST /shop/optometry/v1/item/data
 ```
 
 >请求参数
@@ -299,7 +299,7 @@ POST /optometry/v1/item/data
 ## 删除(按套餐)
 
 ```
-DELETE /optometry/v1/item/delete-by-combo
+DELETE /shop/optometry/v1/item/delete-by-combo
 ```
 
 >请求参数
@@ -327,7 +327,7 @@ DELETE /optometry/v1/item/delete-by-combo
 ## 删除(按检查项)
 
 ```
-DELETE /optometry/v1/item/delete-by-optometryitem
+DELETE /shop/optometry/v1/item/delete-by-optometryitem
 ```
 
 >请求参数
@@ -355,5 +355,5 @@ DELETE /optometry/v1/item/delete-by-optometryitem
 ## 删除
 
 ```
-DELETE /optometry/v1/item/:id
+DELETE /shop/optometry/v1/item/:id
 ```
