--- a/门店/签到/签到.md
+++ b/门店/签到/签到.md
@@ -111,7 +111,7 @@
 ## 签到顾客
 
 ```
-POST /signin/v1/signin
+POST /shop/signin/v1/signin
 ```
 
 >请求参数
@@ -145,7 +145,7 @@ POST /signin/v1/signin
 ## 撤销签到
 
 ```
-POST /signin/v1/signin/undo
+POST /shop/signin/v1/signin/undo
 ```
 
 >请求参数
@@ -173,7 +173,7 @@ POST /signin/v1/signin/undo
 ## 签到列表
 
 ```
-GET /signin/v1/signin
+GET /shop/signin/v1/signin
 ```
 
 >请求参数
@@ -220,7 +220,7 @@ GET /signin/v1/signin
 ## 签到详情
 
 ```
-GET /signin/v1/signin/status
+GET /shop/signin/v1/signin/status
 ```
 
 >请求参数
@@ -284,7 +284,7 @@ GET /signin/v1/signin/status
 ## 离店
 
 ```
-POST /signin/v1/signin/leave
+POST /shop/signin/v1/signin/leave
 ```
 
 >请求参数
