--- a/门店/账单/支付.md
+++ b/门店/账单/支付.md
@@ -69,7 +69,7 @@
 ## 支付
 
 ```
-POST /bill/v1/bill/pay
+POST /shop/bill/v1/bill/pay
 ```
 
 > 请求参数
@@ -133,7 +133,7 @@ POST /bill/v1/bill/pay
 ## 作废支付
 
 ```
-POST /bill/v1/bill/pay/cancel
+POST /shop/bill/v1/bill/pay/cancel
 ```
 > 请求参数
 
