--- a/门店/账单/账单.md
+++ b/门店/账单/账单.md
@@ -68,7 +68,7 @@
 ## 划价(检查单)
 
 ```
-POST /bill/v1/bill/create-by-optometry
+POST /shop/bill/v1/bill/create-by-optometry
 ```
 
 >请求参数
@@ -114,7 +114,7 @@ POST /bill/v1/bill/create-by-optometry
 ## 划价(处置单)
 
 ```
-POST /bill/v1/bill/create-by-treatment
+POST /shop/bill/v1/bill/create-by-treatment
 ```
 
 >请求参数
@@ -240,17 +240,17 @@ POST /bill/v1/bill/create-by-treatment
 ## 列表
 
 ```
-GET /bill/v1/bill
+GET /shop/bill/v1/bill
 ```
 
 ## 查看
 
 ```
-GET /bill/v1/bill/:id
+GET /shop/bill/v1/bill/:id
 ```
 
 ## 取消
 
 ```
-POST /bill/v1/bill/cancel
+POST /shop/bill/v1/bill/cancel
 ```
