--- a/门店/门店/门店.md
+++ b/门店/门店/门店.md
@@ -56,17 +56,17 @@
 ## 门店列表
 
 ```
-GET /shop/v1/shop
+GET /shop/shop/v1/shop
 ```
 
 ## 查看门店
 
 ```
-GET /shop/v1/shop/:id
+GET /shop/shop/v1/shop/:id
 ```
 
 ## 编辑
 
 ```
-PATCH /shop/v1/:id
+PATCH /shop/shop/v1/:id
 ```
