--- a/门店/门店/门店设置.md
+++ b/门店/门店/门店设置.md
@@ -16,13 +16,13 @@
 ## 全部设置项
 
 ```
-GET /shop/v1/setting/:shopId
+GET /shop/shop/v1/setting/:shopId
 ```
 
 ## 按项查看
 
 ```
-GET /shop/v1/setting/:shopId?path=:item
+GET /shop/shop/v1/setting/:shopId?path=:item
 ```
 
 > 其中:item为设置项, 见下表
