--- a/门店/问卷/问卷.md
+++ b/门店/问卷/问卷.md
@@ -110,7 +110,7 @@
 ## 顾客问卷
 
 ```
-GET /survey/v1/survey/view
+GET /shop/survey/v1/survey/view
 ```
 > 请求参数
 
@@ -135,7 +135,7 @@ GET /survey/v1/survey/view
 ## 提交问卷
 
 ```
-POST /survey/v1/survey
+POST /shop/survey/v1/survey
 ```
 
 >请求参数
