--- a/门店/顾客/顾客.md
+++ b/门店/顾客/顾客.md
@@ -159,7 +159,7 @@
 ## 添加顾客
 
 ```
-POST /customer/v1/customer
+POST /shop/customer/v1/customer
 ```
 
 >请求参数
@@ -247,13 +247,13 @@ POST /customer/v1/customer
 ## 顾客列表
 
 ```
-GET /customer/v1/customer
+GET /shop/customer/v1/customer
 ```
 
 ## 顾客关联账户列表
 
 ```
-GET /customer/v1/customer/linked-account
+GET /shop/customer/v1/customer/linked-account
 ```
 
 >请求参数
@@ -288,23 +288,23 @@ GET /customer/v1/customer/linked-account
 ## 编辑顾客
 
 ```
-PATCH /customer/v1/customer/:id
+PATCH /shop/customer/v1/customer/:id
 ```
 
 ## 查看顾客
 
 ```
-GET /customer/v1/customer/:id
+GET /shop/customer/v1/customer/:id
 ```
 
 ## 删除顾客
 
 ```
-DELETE /customer/v1/customer/:id
+DELETE /shop/customer/v1/customer/:id
 ```
 
 ## 关联顾客
 
 ```
-GET /customer/v1/customer/linked?id=:id
+GET /shop/customer/v1/customer/linked?id=:id
 ```
