--- a/门店/预付款/预付款.md
+++ b/门店/预付款/预付款.md
@@ -80,7 +80,7 @@
 ## 预付款记录
 
 ```
-GET /balance/v1/balance
+GET /shop/balance/v1/balance
 ```
 
 >请求参数
@@ -108,7 +108,7 @@ GET /balance/v1/balance
 ## 预付款充值/退款/转移
 
 ```
-POST /balance/v1/balance
+POST /shop/balance/v1/balance
 ```
 
 >请求参数
