--- a/全局/使用说明.md
+++ b/全局/使用说明.md
@@ -7,7 +7,7 @@
 ## 请求主机
 ---------------
 - 云端服务器: https://cloudapi.qingpai365.com
-- 通用服务地址: https://commservice.qingpai365.com
+- 通用服务地址: https://业务服务器地址/commservice
 
 ## 请求语法
 -------------------------
@@ -131,7 +131,7 @@
 ## 上传文件
 
 `
-POST {{host}}/api/commservice/file/v1/upload
+POST /shop/storage/v1/upload
 `
 > 请求参数:
 
@@ -149,15 +149,38 @@ POST {{host}}/api/commservice/file/v1/upload
         <td>上传的文件</td>
     </tr>
     <tr>
-        <td>prefix</td>
-        <td>是</td>
+        <td>key</td>
+        <td>-</td>
         <td>string</td>
-        <td>当前appId, 登录时有返回</td>
+        <td>文件保存的key</td>
     </tr>
 </table>
 
 ## 获取上传文件
 
 `
-GET {{host}}/api/commservice/file/v1/get?key=:key
+GET /shop/storage/v1/get
 `
+
+> 请求参数:
+
+<table>
+    <tr>
+        <th style="width:150px;">请求参数</th>
+        <th>必须</th>
+        <th>类型</th>
+        <th>说明</th>
+    </tr>
+    <tr>
+        <td>key</td>
+        <td>是</td>
+        <td>string</td>
+        <td>文件key</td>
+    </tr>
+    <tr>
+        <td>download</td>
+        <td>-</td>
+        <td>number</td>
+        <td>1: 下载 0:显示</td>
+    </tr>
+</table>
