--- a/全局/使用说明.md
+++ b/全局/使用说明.md
@@ -156,8 +156,14 @@ POST /shop/storage/v1/upload
     </tr>
 </table>
 
-## 获取上传文件
+## 访问上传文件
+> 直接访问文件, 不需要认证
+`
+GET /storage/:key
+`
 
+## 获取上传文件
+> 通过接口获取上传文件, 需要认证
 `
 GET /shop/storage/v1/get
 `
