--- a/门店/签到/签到.md
+++ b/门店/签到/签到.md
@@ -108,6 +108,58 @@
     </tr>
 </table>
 
+
+## 签到二维码
+
+```
+GET /shop/wechat3p/v1/qrcode
+```
+
+>请求参数
+<table>
+    <tr>
+        <th style="width:150px;">名称</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:60px;">必填</th>
+        <th style="width:200px;">说明</th>
+    </tr>
+    <tr>
+        <td>shopId</td>
+        <td>string</td>
+        <td>是</td>
+        <td>门店ID</td>
+    </tr>
+</table>
+
+>返回数据
+
+<table>
+    <tr>
+        <th style="width:150px;">名称</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:60px;">说明</th>
+        <th style="width:200px;">备注</th>
+    </tr>
+    <tr>
+        <td>errcode</td>
+        <td>int</td>
+        <td>错误码</td>
+        <td>0代表正常, 非0则有错误发生</td>
+    </tr>
+    <tr>
+        <td>errmsg</td>
+        <td>string</td>
+        <td>错误内容</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>url</td>
+        <td>string</td>
+        <td>微信二维码内容</td>
+        <td>将url内容生成二维码, 注意:此url不可访问,仅为二维码内容</td>
+    </tr>
+</table>
+
 ## 签到顾客
 
 ```
