--- a/微信/扫码签到.md
+++ b/微信/扫码签到.md
@@ -1,29 +1,29 @@
-# 扫码签到
+# 扫码候诊
 
-## 扫码签到流程
+## 扫码候诊流程
 
->步骤1. 签到起始页面: /api/public/v1/wechat/redirect?appId=:appId&shopId=:shopId, 作用: 导航到微信授权页面
+>步骤1. 候诊起始页面: /api/public/v1/wechat/redirect?appId=:appId&shopId=:shopId, 作用: 导航到微信授权页面
 
 >步骤2. 微信授权后, 返回页面: /api/public/v1/wechat/auth?appId=:appId&shopId=:shopId&openid=:openid, 作用: 获取openid, 跳转到前端页面
 
 >步骤3. 跳转到前端页面: /wechat/redirect?appId=:appId&shopId=:shopId&token=:token, 作用: 发放token, 跳转到前端页面
 
->步骤4. 前端页面处理token, 进入签到页面
+>步骤4. 前端页面处理token, 进入候诊页面
 
-## 顾客列表
->已绑定的顾客列表, 字段见门店顾客
+## 患者列表
+>已绑定的患者列表, 字段见门店患者
 
 ```
 GET /api/wechat/v1/customer
 ```
 
-## 顾客详情
+## 患者详情
 
 ```
 GET /api/wechat/v1/customer/:id
 ```
 
-## 添加顾客
+## 添加患者
 
 ```
 POST /api/wechat/v1/customer
@@ -111,7 +111,7 @@ POST /api/wechat/v1/customer
     </tr>
 </table>
 
-## 编辑顾客
+## 编辑患者
 
 ```
 PATCH /api/wechat/v1/customer/:id
@@ -119,7 +119,7 @@ PATCH /api/wechat/v1/customer/:id
 
 ## 微信账户信息
 
->添加顾客时可使用此接口获取微信信息填充表单部分字段
+>添加患者时可使用此接口获取微信信息填充表单部分字段
 
 ```
 GET /api/wechat/v1/userinfo
