--- a/门店/候诊/候诊.md
+++ b/门店/候诊/候诊.md
@@ -1,4 +1,4 @@
-# 签到信息
+# 候诊信息
 
 > 更新记录
 
@@ -25,8 +25,8 @@
     <tr>
         <td>fromChannel</td>
         <td>FromChannel</td>
-        <td>签到渠道</td>
-        <td>见全局/顾客参数</td>
+        <td>候诊渠道</td>
+        <td>见全局/患者参数</td>
     </tr>
     <tr>
         <td>name</td>
@@ -109,7 +109,7 @@
 </table>
 
 
-## 签到二维码
+## 候诊二维码
 
 ```
 GET /shop/wechat3p/v1/qrcode
@@ -160,7 +160,7 @@ GET /shop/wechat3p/v1/qrcode
     </tr>
 </table>
 
-## 签到顾客
+## 候诊患者
 
 ```
 POST /shop/signin/v1/signin
@@ -181,20 +181,14 @@ POST /shop/signin/v1/signin
         <td>门店ID</td>
     </tr>
     <tr>
-        <td>customerId</td>
+        <td>patientId</td>
         <td>string</td>
         <td>是</td>
-        <td>顾客ID</td>
-    </tr>
-    <tr>
-        <td>fromChannel</td>
-        <td>来源</td>
-        <td>是</td>
-        <td>手工签到请传: manual</td>
+        <td>患者ID</td>
     </tr>
 </table>
 
-## 撤销签到
+## 撤销候诊
 
 ```
 POST /shop/signin/v1/signin/undo
@@ -215,14 +209,14 @@ POST /shop/signin/v1/signin/undo
         <td>门店ID</td>
     </tr>
     <tr>
-        <td>customerId</td>
+        <td>patientId</td>
         <td>string</td>
         <td>是</td>
-        <td>顾客ID</td>
+        <td>患者ID</td>
     </tr>
 </table>
 
-## 签到列表
+## 候诊列表
 
 ```
 GET /shop/signin/v1/signin
@@ -244,22 +238,22 @@ GET /shop/signin/v1/signin
         <td>门店ID</td>
     </tr>
     <tr>
-        <td>customerId</td>
+        <td>patientId</td>
         <td>string</td>
         <td>-</td>
-        <td>顾客ID</td>
+        <td>患者ID</td>
     </tr>
     <tr>
         <td>start</td>
         <td>date</td>
         <td>-</td>
-        <td>起始日期, yyyy-MM-dd 如: 2020-01-02, 不传默认当天开始时间</td>
+        <td>起始时间戳, 不传默认当天开始时间</td>
     </tr>
     <tr>
         <td>end</td>
         <td>date</td>
         <td>-</td>
-        <td>结束日期, yyyy-MM-dd 如: 2020-01-02</td>
+        <td>结束时间戳, 不传默认明天开始时间</td>
     </tr>
     <tr>
         <td>keyword</td>
@@ -269,7 +263,7 @@ GET /shop/signin/v1/signin
     </tr>
 </table>
 
-## 签到详情
+## 候诊详情
 
 ```
 GET /shop/signin/v1/signin/status
@@ -287,14 +281,14 @@ GET /shop/signin/v1/signin/status
     <tr>
         <td>shopId</td>
         <td>string</td>
-        <td>-</td>
+        <td>是</td>
         <td>门店ID</td>
     </tr>
     <tr>
-        <td>id</td>
+        <td>patientId</td>
         <td>string</td>
-        <td>-</td>
-        <td>签到ID</td>
+        <td>是</td>
+        <td>患者ID</td>
     </tr>
 </table>
 
@@ -354,9 +348,9 @@ POST /shop/signin/v1/signin/leave
         <td>门店ID</td>
     </tr>
     <tr>
-        <td>id</td>
+        <td>patientId</td>
         <td>string</td>
         <td>是</td>
-        <td>签到ID</td>
+        <td>患者ID</td>
     </tr>
 </table>
