--- a/门店/患者/患者.md
+++ b/门店/患者/患者.md
@@ -1,4 +1,4 @@
-# 顾客信息
+# 患者信息
 
 > 更新记录
 
@@ -29,6 +29,12 @@
         <td>-</td>
     </tr>
     <tr>
+        <td>default</td>
+        <td>bool</td>
+        <td>默认账号</td>
+        <td>-</td>
+    </tr>
+    <tr>
         <td>name</td>
         <td>string</td>
         <td>姓名</td>
@@ -41,28 +47,34 @@
         <td>-</td>
     </tr>
     <tr>
+        <td>idcardType</td>
+        <td>string</td>
+        <td>证件类型</td>
+        <td>身份证: sfz 护照: hz 港澳居民来往内地通行证: txz 台湾居民来往大陆通行证: tw 外国人永久居留身份证: waiguoren 港澳台居民居住证: hkmojumin</td>
+    </tr>
+    <tr>
+        <td>idcardNum</td>
+        <td>string</td>
+        <td>证件号码</td>
+        <td>-</td>
+    </tr>
+    <tr>
         <td>mobile</td>
         <td>string</td>
         <td>手机号</td>
         <td>-</td>
-    </tr>    
+    </tr>
     <tr>
         <td>gender</td>
         <td>Gender</td>
         <td>性别</td>
-        <td>male, female, unknown</td>
+        <td>男: male, 女: female, 未知: unknown</td>
     </tr>
     <tr>
         <td>birthday</td>
         <td>date</td>
         <td>出生日期</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>idcard</td>
-        <td>string</td>
-        <td>身份证</td>
-        <td>-</td>
+        <td>格式: 2021-01-02</td>
     </tr>
     <tr>
         <td>country</td>
@@ -107,23 +119,17 @@
         <td>账户积分</td>
     </tr>
     <tr>
-        <td>wechatNickname</td>
-        <td>string</td>
-        <td>微信昵称</td>
+        <td>lastSigninAt</td>
+        <td>int</td>
+        <td>最新候诊时间</td>
         <td>-</td>
     </tr>
     <tr>
-        <td>wechatHeadimgurl</td>
+        <td>credit</td>
         <td>string</td>
-        <td>微信头像</td>
+        <td>标签</td>
         <td>-</td>
-    </tr>
-    <tr>
-        <td>LastSigninAt</td>
-        <td>date</td>
-        <td>最新签到时间</td>
-        <td>-</td>
-    </tr>
+    </tr>    
     <tr>
         <td>tag</td>
         <td>List<String></td>
@@ -134,7 +140,7 @@
         <td>fromChannel</td>
         <td>FromChannel</td>
         <td>注册渠道</td>
-        <td>见全局/顾客参数</td>
+        <td>见全局/患者参数</td>
     </tr>
     <tr>
         <td>fromReferrer</td>
@@ -156,10 +162,10 @@
     </tr>
 </table>
 
-## 添加顾客
+## 添加患者
 
 ```
-POST /shop/customer/v1/customer
+POST /shop/patient/v1/patient
 ```
 
 >请求参数
@@ -189,6 +195,18 @@ POST /shop/customer/v1/customer
         <td>手机号</td>
     </tr>
     <tr>
+        <td>idcardType</td>
+        <td>string</td>
+        <td>-</td>
+        <td>证件类型, 身份证: sfz 护照: hz 港澳居民来往内地通行证: txz 台湾居民来往大陆通行证: tw 外国人永久居留身份证: waiguoren 港澳台居民居住证: hkmojumin</td>
+    </tr>
+    <tr>
+        <td>idcardNum</td>
+        <td>string</td>
+        <td>-</td>
+        <td>证件号码</td>
+    </tr> 
+    <tr>
         <td>gender</td>
         <td>Gender</td>
         <td>是</td>
@@ -199,12 +217,6 @@ POST /shop/customer/v1/customer
         <td>date</td>
         <td>-</td>
         <td>出生日期</td>
-    </tr>
-    <tr>
-        <td>idcard</td>
-        <td>string</td>
-        <td>身份证</td>
-        <td>-</td>
     </tr>
     <tr>
         <td>country</td>
@@ -236,28 +248,15 @@ POST /shop/customer/v1/customer
         <td>地址</td>
         <td>-</td>
     </tr>
-    <tr>
-        <td>address</td>
-        <td>string</td>
-        <td>-</td>
-        <td>地址</td>
-    </tr>
 </table>
 
-## 顾客列表
+## 患者列表
 
 ```
-GET /shop/customer/v1/customer
-```
-
-## 顾客关联账户列表
-
-```
-GET /shop/customer/v1/customer/linked-account
+GET /shop/patient/v1/patient
 ```
 
 >请求参数
-
 <table>
     <tr>
         <th style="width:150px;">名称</th>
@@ -269,42 +268,55 @@ GET /shop/customer/v1/customer/linked-account
         <td>shopId</td>
         <td>string</td>
         <td>-</td>
-        <td>门店ID</td>
+        <td>门店Id</td>
     </tr>
     <tr>
-        <td>customerId</td>
-        <td>string</td>
-        <td>是</td>
-        <td>门店ID</td>
-    </tr>
-    <tr>
-        <td>expand</td>
+        <td>name</td>
         <td>string</td>
         <td>-</td>
-        <td>expand=signinStatus 获取当日签到状态</td>
+        <td>姓名</td>
+    </tr>
+    <tr>
+        <td>gender</td>
+        <td>string</td>
+        <td>-</td>
+        <td>性别</td>
+    </tr>
+    <tr>
+        <td>idcard</td>
+        <td>string</td>
+        <td>-</td>
+        <td>身份证</td>
+    </tr>
+    <tr>
+        <td>mobile</td>
+        <td>string</td>
+        <td>-</td>
+        <td>手机号</td>
+    </tr>
+    <tr>
+        <td>keyword</td>
+        <td>string</td>
+        <td>-</td>
+        <td>搜索关键词</td>
     </tr>
 </table>
 
-## 编辑顾客
+
+## 编辑患者
 
 ```
-PATCH /shop/customer/v1/customer/:id
+PATCH /shop/patient/v1/patient/:id
 ```
 
-## 查看顾客
+## 查看患者
 
 ```
-GET /shop/customer/v1/customer/:id
+GET /shop/patient/v1/patient/:id
 ```
 
-## 删除顾客
+## 删除患者
 
 ```
-DELETE /shop/customer/v1/customer/:id
-```
-
-## 关联顾客
-
-```
-GET /shop/customer/v1/customer/linked?id=:id
+DELETE /shop/patient/v1/patient/:id
 ```
