--- a/门店/问卷/问卷.md
+++ b/门店/问卷/问卷.md
@@ -31,13 +31,13 @@
     <tr>
         <td>customerId</td>
         <td>String</td>
-        <td>顾客ID</td>
+        <td>患者ID</td>
         <td>-</td>
     </tr>
     <tr>
         <td>customerName</td>
         <td>string</td>
-        <td>顾客名</td>
+        <td>患者名</td>
         <td>-</td>
     </tr>
     <tr>
@@ -107,7 +107,7 @@
     </tr>
 </table>
 
-## 顾客问卷
+## 患者问卷
 
 ```
 GET /shop/survey/v1/survey/view
@@ -162,7 +162,7 @@ POST /shop/survey/v1/survey
         <td>customerId</td>
         <td>string</td>
         <td>是</td>
-        <td>顾客ID</td>
+        <td>患者ID</td>
     </tr>
     <tr>
         <td>content</td>
