--- a/门店/预付款/预付款.md
+++ b/门店/预付款/预付款.md
@@ -24,13 +24,13 @@
     <tr>
         <td>customerId</td>
         <td>string</td>
-        <td>顾客ID</td>
+        <td>患者ID</td>
         <td>-</td>
     </tr>
     <tr>
         <td>customerName</td>
         <td>string</td>
-        <td>顾客名</td>
+        <td>患者名</td>
         <td>-</td>
     </tr>
     <tr>
@@ -48,13 +48,13 @@
     <tr>
         <td>destCustomerId</td>
         <td>string</td>
-        <td>转移到的顾客ID</td>
+        <td>转移到的患者ID</td>
         <td>-</td>
     </tr>
     <tr>
         <td>destCustomerName</td>
         <td>string</td>
-        <td>转移到的顾客名</td>
+        <td>转移到的患者名</td>
         <td>-</td>
     </tr>
     <tr>
@@ -101,7 +101,7 @@ GET /shop/balance/v1/balance
         <td>customerId</td>
         <td>string<ItemList></td>
         <td>-</td>
-        <td>顾客ID</td>
+        <td>患者ID</td>
     </tr>
 </table>
 
@@ -135,13 +135,13 @@ POST /shop/balance/v1/balance
         <td>customerId</td>
         <td>string</td>
         <td>是</td>
-        <td>顾客ID</td>
+        <td>患者ID</td>
     </tr>
     <tr>
         <td>destCustomerId</td>
         <td>string</td>
         <td>-</td>
-        <td>转移到的顾客ID</td>
+        <td>转移到的患者ID</td>
     </tr>
     <tr>
         <td>payMethod</td>
