--- a/微信/微信首页.md
+++ b/微信/微信首页.md
@@ -25,14 +25,14 @@
     <tr>
         <td>customer</td>
         <td>Customer</td>
-        <td>顾客信息</td>
-        <td>见门店里顾客文档</td>
+        <td>患者信息</td>
+        <td>见门店里患者文档</td>
     </tr>
     <tr>
         <td>signin</td>
         <td>Signin</td>
-        <td>今日签到信息</td>
-        <td>见门店里签到文档</td>
+        <td>今日候诊信息</td>
+        <td>见门店里候诊文档</td>
     </tr>
     <tr>
         <td>optometry</td>
@@ -66,7 +66,7 @@
 GET /api/wechat/v1/index
 ```
 
-## 签到顾客
+## 候诊患者
 
 ```
 POST /api/wechat/v1/signin
@@ -90,7 +90,7 @@ POST /api/wechat/v1/signin
         <td>customerId</td>
         <td>string</td>
         <td>是</td>
-        <td>顾客ID</td>
+        <td>患者ID</td>
     </tr>
 </table>
 
