--- a/门店/处置/处置单.md
+++ b/门店/处置/处置单.md
@@ -59,7 +59,7 @@ POST /shop/treatment/v1/treatment
     <tr>
         <td>customerId</td>
         <td>string</td>
-        <td>顾客ID</td>
+        <td>患者ID</td>
         <td>-</td>
     </tr>
 </table>
