--- a/门店/检查/检查单.md
+++ b/门店/检查/检查单.md
@@ -59,7 +59,7 @@ POST /shop/optometry/v1/optometry
     <tr>
         <td>customerId</td>
         <td>string</td>
-        <td>顾客ID</td>
+        <td>患者ID</td>
         <td>-</td>
     </tr>
 </table>
