--- a/门店/检查/检查项目.md
+++ b/门店/检查/检查项目.md
@@ -31,7 +31,7 @@
     <tr>
         <td>customerName</td>
         <td>string</td>
-        <td>顾客名</td>
+        <td>患者名</td>
         <td>-</td>
     </tr>
     <tr>
@@ -124,7 +124,7 @@ GET /shop/optometry/v1/item/check
     <tr>
         <td>customerId</td>
         <td>是</td>
-        <td>顾客ID</td>
+        <td>患者ID</td>
     </tr>
 </table>
 
