--- a/全局/使用说明.md
+++ b/全局/使用说明.md
@@ -7,7 +7,8 @@
 ## 请求主机
 ---------------
 - 云端服务器: https://cloudapi.qingpai365.com
-- 通用服务地址: https://业务服务器地址/commservice
+- 业务服务器: https://erptest.qingpai365.com
+- 服务地址: https://业务服务器地址/commservice
 
 ## 请求语法
 -------------------------
