--- a/全局/登录认证.md
+++ b/全局/登录认证.md
@@ -2,59 +2,6 @@
 
 ## 门店登录
 
->步骤1. 查询业务服务器
-
-`
-POST {{cloud_host}}/public/v1/account/router
-`
-> 请求参数:
-
-<table>
-    <tr>
-        <th style="width:150px;">请求参数</th>
-        <th>必须</th>
-        <th>类型</th>
-        <th>说明</th>
-    </tr>
-    <tr>
-        <td>account</td>
-        <td>是</td>
-        <td>string</td>
-        <td>账号</td>
-    </tr>
-</table>
-
-> 返回参数:
-<table>
-    <tr>
-        <th style="width:150px;">请求参数</th>
-        <th>类型</th>
-        <th>说明</th>
-    </tr>
-    <tr>
-        <td>appId</td>
-        <td>string</td>
-        <td>业务系统AppId</td>
-    </tr>
-    <tr>
-        <td>account</td>
-        <td>string</td>
-        <td>账号</td>
-    </tr>
-    <tr>
-        <td>domain</td>
-        <td>string</td>
-        <td>业务服务器域名</td>
-    </tr>
-    <tr>
-        <td>contextPath</td>
-        <td>string</td>
-        <td>业务服务器contextPath，完整的请求请使用 域名+contextPath 拼在一起</td>
-    </tr>
-</table>
-
->步骤2. 业务服务器登录
-
 `
 POST /public/shop/v1/user/login
 `
@@ -90,7 +37,7 @@ POST /public/shop/v1/user/login
         <td>device</td>
         <td>是</td>
         <td>string</td>
-        <td>设备，设备描述，如华为S40平板v7.1</td>
+        <td>设备，设备描述，如华为S40平板v7.1, 浏览器传user-agent</td>
     </tr>
 </table>
 
@@ -102,12 +49,6 @@ POST /public/shop/v1/user/login
         <th>类型</th>
         <th>说明</th>
         <th>备注</th>
-    </tr>
-    <tr>
-        <td>appId</td>
-        <td>string</td>
-        <td>系统AppId</td>
-        <td>-</td>
     </tr>
     <tr>
         <td>user</td>
