--- a/全局/使用说明.md
+++ b/全局/使用说明.md
@@ -5,10 +5,21 @@
 -------------------------
 
 ## 请求主机
----------------
+-------------------------
 - 云端服务器: https://cloudapi.qingpai365.com
-- 业务服务器: https://erptest.qingpai365.com
+- 业务服务器: https://crmtest.qingpai365.com
 - 服务地址: https://业务服务器地址/commservice
+
+## URL分配
+-------------------------
+- 接口: https://crmtest.qingpai365.com/shopapi
+- 门店WEB: https://crmtest.qingpai365.com/shopweb
+- 门店微信: https://crmtest.qingpai365.com/shopwechat
+- 门店管理后台: https://crmtest.qingpai365.com/adminweb
+
+## 测试账号
+-------------------------
+- 门店: 测试医院管理员/1152201
 
 ## 请求语法
 -------------------------
