--- a/门店/患者/患者.md
+++ b/门店/患者/患者.md
@@ -177,6 +177,12 @@ POST /shop/patient/v1/patient
         <th style="width:200px;">说明</th>
     </tr>
     <tr>
+        <td>id</td>
+        <td>string</td>
+        <td>-</td>
+        <td>患者ID, 新增时不传, 选择时传选中患者ID</td>
+    </tr>
+    <tr>
         <td>shopId</td>
         <td>string</td>
         <td>是</td>
@@ -250,6 +256,34 @@ POST /shop/patient/v1/patient
     </tr>
 </table>
 
+> 返回参数
+<table>
+    <tr>
+        <th style="width:150px;">名称</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:60px;">说明</th>
+        <th style="width:200px;">备注</th>
+    </tr>
+    <tr>
+        <td>code</td>
+        <td>int</td>
+        <td>响应状态</td>
+        <td>0: 正常 1: 发生错误</td>
+    </tr>
+    <tr>
+        <td>message</td>
+        <td>string</td>
+        <td>错误描述</td>
+        <td>exists: 患者已存在, data字段为已经存在的患者, 其它: 错误消息</td>
+    </tr>
+    <tr>
+        <td>data</td>
+        <td>object</td>
+        <td>患者数据</td>
+        <td>message为exists时为已经存在的患者</td>
+    </tr>
+</table>
+
 ## 患者列表
 
 ```
@@ -283,10 +317,16 @@ GET /shop/patient/v1/patient
         <td>性别</td>
     </tr>
     <tr>
-        <td>idcard</td>
+        <td>idcardType</td>
         <td>string</td>
         <td>-</td>
-        <td>身份证</td>
+        <td>证件类型</td>
+    </tr>
+    <tr>
+        <td>idcardNum</td>
+        <td>string</td>
+        <td>-</td>
+        <td>证件号码</td>
     </tr>
     <tr>
         <td>mobile</td>
